--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.4",
+    "@types/pg": "^8.11.9",
     "typescript": "^5.6.2"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "pg": "^8.12.0",
     "vitest": "^2.1.1"
   }
 }
