feat: restaurant queries + docker test env working
Chaged base schema of posgres to separate operations and promotion into
dedicated tables.
Corrected queries to acomodate schema changes.
Changed restaurant and product naming convention to facilitate
compatibility with database
Implemented basic tests for /restaurantes endpoint where it tests only
basic and valid requests.

--- a/compose.yaml
+++ b/compose.yaml
@@ -9,15 +9,15 @@ services:
       - POSTGRES_PASSWORD=${DB_PASSWORD}
     healthcheck:
       test: pg_isready -U ${DB_USER} -d ${DB_NAME}
-      interval: 5s
-      timeout: 3s
+      interval: 2s
+      timeout: 2s
       retries: 5
 
   test:
     build:
       context: .
       dockerfile: Dockerfile.test
-    image: app-test
+    image: app-test:latest
     depends_on:
       - database
     environment:
