--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "npx vitest",
-    "test:docker": "docker compose run --build test && docker compose down && docker container prune -f && docker rmi app-test",
+    "test:docker": "docker compose run --build test && docker compose down && docker container prune -f && docker image prune -f",
     "build": "rm -rf ./dist && npx tsc",
     "start": "npm run build && node ./dist/index.js"
   },
