feat: docker interaction for testing
Changed interaction, now workflow is 'npm run docker:db' followed by any
amount of 'npm run docker:test' to make it more efficient to run tests
in docker

--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -4,6 +4,4 @@ WORKDIR /home/app
 
 COPY . .
 
-RUN npm install --include=dev
-
-CMD node migrate.js && npx vitest run
+CMD node migrate.js down && node migrate.js up && npx vitest run
