--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "pg": "^8.12.0",
-    "vitest": "^2.1.1"
+    "vitest": "^2.1.1",
+    "zod": "^3.23.8"
   }
 }
