--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.4",
     "@types/pg": "^8.11.9",
+    "@types/swagger-ui-express": "^4.1.6",
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "pg": "^8.12.0",
+    "swagger-ui-express": "^5.0.1",
     "vitest": "^2.1.1",
     "zod": "^3.23.8"
   }
