--- a/compose.yaml
+++ b/compose.yaml
@@ -15,6 +15,25 @@ services:
     networks:
       - database-network
 
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    depends_on:
+      database:
+        condition: service_healthy
+    environment:
+      - PORT=${PORT}
+      - DB_NAME=${DB_NAME}
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
+    ports:
+      - "${PORT}:${PORT}"
+    networks:
+      - database-network
+
   test:
     build:
       context: .
